adds comments and documentation