@@ -3,14 +3,27 @@ package com.org.app.resources;
 import java.util.ArrayList;
 import java.util.HashMap;
 
-
+/**
+ * Block based memory
+ */
 public class Memory {
   private final int numberOfBlocks;
 
+  /**
+   * List of available blocks by size, <size, list of blocks>
+   */
   public HashMap<Integer, ArrayList<Block>> mapOfSizes;
 
+  /**
+   * Map of allocated blocks <name, block>
+   */
   public HashMap<String, Block> listOfAllocated;
 
+  /**
+   * Class constructor
+   * 
+   * @param numberOfBlocks Total number of blocks that the memory manages
+   */
   public Memory(int numberOfBlocks) {
     this.numberOfBlocks = numberOfBlocks;
     listOfAllocated = new HashMap<>();
@@ -24,11 +37,18 @@ public class Memory {
     mapOfSizes.get(numberOfBlocks).add(root);
   }
 
+  /**
+   * Allocates a certain number of blocks to a name
+   * 
+   * @param name Name of memory holder
+   * @param size Size to be allocated
+   * @return
+   */
   public boolean allocateMemory(String name, int size) {
     if (size > numberOfBlocks)
       return false;
 
-    if (listOfAllocated.get(name) != null){
+    if (listOfAllocated.get(name) != null) {
       System.out.println("Ya se ha reservado memoria bajo este identificador");
       return false;
     }
@@ -50,7 +70,7 @@ public class Memory {
       sizeOffset++;
     }
 
-    Block availableBlock = currentList.getFirst();
+    Block availableBlock = currentList.get(0);
     currentList.remove(availableBlock);
 
     while (sizeOffset > 0) {
@@ -71,6 +91,11 @@ public class Memory {
     return true;
   }
 
+  /**
+   * Adds a block to the list of available blocks
+   * 
+   * @param block block to be added
+   */
   private void insertBuddies(Block block) {
     int size = block.end - block.start + 1;
     int buddyNumber = block.start / size;
@@ -79,7 +104,7 @@ public class Memory {
     ArrayList<Block> listOfBlocks = mapOfSizes.get(size);
     Block blockInList = listOfBlocks.stream().filter(block::equals).findFirst().orElse(null);
 
-    if (blockInList!=null)
+    if (blockInList != null)
       return;
 
     Block buddyBlock = listOfBlocks.stream().filter((bBlock) -> bBlock.start == buddyAddress).findFirst().orElse(null);
@@ -95,6 +120,12 @@ public class Memory {
     }
   }
 
+  /**
+   * Deallocates the memory associated with a name
+   * 
+   * @param name Name of the memory holder
+   * @return true if deallocation was succesfull, false otherwise
+   */
   public boolean deallocateMemory(String name) {
     Block block = listOfAllocated.get(name);
 
